--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -109,6 +109,9 @@ default: &default
   decidim:
     <<: *decidim_default
   omniauth:
+    developer:
+      enabled: true
+      icon: phone-line
     facebook:
       enabled: <%= Decidim::Env.new("OMNIAUTH_FACEBOOK_APP_ID").to_boolean_string %>
       app_id: <%= ENV["OMNIAUTH_FACEBOOK_APP_ID"] %>
