--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,6 +14,7 @@ s3:
   <%= "region: #{Rails.application.secrets.dig(:storage, :s3, :region)}" if Rails.application.secrets.dig(:storage, :s3, :region) %>
   <%= "endpoint: #{Rails.application.secrets.dig(:storage, :s3, :endpoint)}" if Rails.application.secrets.dig(:storage, :s3, :endpoint) %>
   force_path_style: true
+  public: <%= Decidim::Env.new("STORAGE_PUBLIC_LINKS").to_boolean_string %>
 
 azure:
   service: AzureStorage
